# Rendering-Project

./: .gitignore  CMakeLists.txt  LICENSE  README.md  compile.bat
Assets/Shaders/: point_light.frag  point_light.frag.spv  point_light.vert  point_light.vert.spv  simple_shader.frag  simple_shader.frag.spv  simple_shader.vert  simple_shader.vert.spv
GLFW/lib/cmake/glfw3/: glfw3Targets-debug.cmake  glfw3Targets-release.cmake
RPCore/: CMakeLists.txt  Main.cpp
ZenithComponents/: App.cpp  App.h  CMakeLists.txt  Camera.cpp  Camera.h  FrameInfo.h  GameObject.cpp  GameObject.h  KeyboardMovement.cpp  KeyboardMovement.h  ObjectRenderer.h  PointLightSystem.cpp  PointLightSystem.h  Renderer.cpp  Renderer.h  SimpleRenderSystem.cpp  SimpleRenderSystem.h
ZenithCore/: App.cpp  App.h  Assets.h  Buffer.cpp  Buffer.h  CMakeLists.txt  Descriptor.cpp  Descriptor.h  Device.cpp  Device.h  Model.cpp  Model.h  ObjectRenderer.h  Pipeline.cpp  Pipeline.h  SwapChain.cpp  SwapChain.h  Texture.cpp  Texture.h  Utils.h  Window.cpp  Window.h
glm/lib/cmake/glm/: glmConfig-debug.cmake  glmConfig-release.cmake
physx/lib/cmake/physx/: physxConfig-debug.cmake  physxConfig-release.cmake  physxConfig.cmake
